# TRI-X-CDSS

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FIGURE_MANIFEST.csv  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.md/: README.md
docs/: README.md
examples/tier1_examples/: bppv_simulation_demo.py
notebooks/: 01_trix_cdss_quickstart.ipynb  02_trix_cdss_case_comparison.ipynb
scripts/: generate_manuscript_manifest.py
src/trix_cdss/: __init__.py  constants.py
src/trix_cdss/core/: __init__.py  dras5.py  orasr.py  srgl.py  titrate.py  triage.py
src/trix_cdss/tier1_patient/: __init__.py
src/trix_cdss/tier1_patient/digital_twin/: __init__.py  disease_model.py  patient_archetype.py
src/trix_cdss/tier1_patient/digital_twin/disease_models/: __init__.py  bppv.py  menieres.py  posterior_stroke.py  vestibular_migraine.py  vestibular_neuritis.py
src/trix_cdss/tier1_patient/xai/: __init__.py  counterfactual.py  nmf_patterns.py  shap_lime.py
src/trix_cdss/visualization/: __init__.py  patient_level_viz.py  pubviz.py
tests/: conftest.py  test_package_smoke.py  test_units.py
