[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trix-cdss"
version = "1.0.0"
description = "TRI-X: Three-Tier Evaluation Framework for Dizziness Clinical Decision Support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Chatchai Tritham", email = "chatchait66@nu.ac.th"},
    {name = "Chakkrit Snae Namahoot", email = "chakkrits@nu.ac.th"}
]
keywords = [
    "clinical decision support",
    "explainable AI",
    "digital twin",
    "causal inference",
    "medical AI"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/ChatchaiTritham/TRI-X-CDSS"
Documentation = "https://github.com/ChatchaiTritham/TRI-X-CDSS/blob/main/README.md"
Repository = "https://github.com/ChatchaiTritham/TRI-X-CDSS"
Issues = "https://github.com/ChatchaiTritham/TRI-X-CDSS/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["trix_cdss*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=trix_cdss --cov-report=html --cov-report=term"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/trix_cdss"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
